--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,9 +5,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Rocky Mountainr Whitewater Rafting Site Contact Us| Raila Oliech <title>
-    <meta name="description" content=" The rafting site Oliech BYU-Idaho coarse home page, Contact Us Page,Contact Us anytime we are availale anytime.We Share Personal Interests among family, 
-    and friend to came and to enjoy adventures.">
+    <title>Rocky Mountain Whitewater Rafting Company Site Contact Us| Raila Oliech. Contact us  <title>
+    <meta name="description" content=" The rafting site Oliech BYU-Idaho coarse home page, Contact Us Page,Contact Us anytime we are availale anytime. education site">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
