--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Rocky Mountain Whitewater Rafting Company Site Contact Us| Raila Oliech. Contact: +2547884888, rafting@gmail.com <title>
+    <title>Rocky Mountain Whitewater Rafting Company Site Contact Us| Include an email and phone number, so visitors can get in touch with us on their first attempt <title>
     <meta name="description" content=" The rafting site Oliech BYU-Idaho coarse home page, Contact Us Page,Contact Us anytime we are availale anytime. education site">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -35,7 +35,7 @@
             <div class="grid-item item1">
                 <figure>
                     <img src="images/happy-m1.jpg" alt="employee imaage">
-                    <figcaption>General</figcaption>
+                    <figcaption>Reservations Agent</figcaption>
                 </figure>
             </div>
 
