--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -55,7 +55,8 @@
 
             
         <div id="feedback"></div>
-        <br>
+       <br>
+       <section class="go">
         <form action="/my-handling-form-page" method="post">
             <h3>fill the information bellow</h3>
             <fieldset>
@@ -77,6 +78,7 @@
             </fieldset>
             <button type="submit">Send your message</button>
         </form>
+       </section>
     </main>
     <footer>
         <br>
