--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,7 +29,7 @@
         <form action="/my-handling-form-page.php" method="post">
           <h2>Sign up for our newsletter</h2>
           <fieldset>
-            <label for="fastnane">Name:</label>
+            <label for="Nane">Name:</label>
             <input type="text" name="user_name" id="Fastname" required>
             <label for="mail">E-mail:</label>
             <input type="email" name="user_email" id="mail" placeholder="username@gmail.com" required>
