--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,8 +29,8 @@
         <form action="/my-handling-form-page.php" method="post">
           <h2>Sign up for our newsletter</h2>
           <fieldset>
-            <label for="nane">Name:</label>
-            <input type="text" name="user_name" id="name" required>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
             <label for="mail">E-mail:</label>
             <input type="email" name="user_email" id="mail" placeholder="username@gmail.com" required>
           </fieldset>
