--- a/wwr/index.html
+++ b/wwr/index.html
@@ -21,11 +21,11 @@
         </nav>
     </header>
     <main>
-      <div class="hero">
+      <div class="hero-part">
         <img src="images/backgraund-image.jpg" alt="imaage">
-        <h2>Welcome to Rocky White Water Rafting</h2>
+        <h1>Welcome to Rocky White Water Rafting</h1>
       </div>
-      <section class="get">
+      <br>
         <form action="/my-handling-form-page.php" method="post">
           <h2>Sign up for our newsletter</h2>
           <fieldset>
@@ -34,9 +34,8 @@
             <label for="mail">E-mail:</label>
             <input type="email" name="user_email" id="mail" placeholder="username@gmail.com" required>
           </fieldset>
-          <button type="submit" class="contact.html">Sign Up</button>
+          <button type="submit">Sign Up</button>
         </form>
-      </section>  
       <br>
       <br>
       <section class="contact">
@@ -83,7 +82,6 @@
     </footer>
   </body>
 </html>  
-
 
 
 
