--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rocky Mountain Whitewater Rafting Company| Rafting Trips </title>
-    <meta name="description" content=" The rafting site Oliech BYU-Idaho coarse home page, Contact Us Page,Explore our exciting rafting trips">
+    <meta name="description" content=" The rafting site Oliech BYU-Idaho coarse home page, Contact Us Page, Explore our exciting rafting trips">
     <meta name="author" content="Raila Oliech">
     <link rel="stylesheet" href="styles/rafting.css">
   </head>
@@ -28,19 +28,19 @@
 
         <div class="grid-container">
             <div class="grid-item item1">
-                <h3>Trip 1</h3>
+                <h3> 1 Day Raft Trip</h3>
                 <img src="images/trips1.jpg" alt="employee imaage" width="400">      
                 <p>For the great white water rafting adventure, join us on Trip 3. This advanced-level trip spans 4 days, offering a true test of your rafting skills. Brace yourself for challenging rapids and turbulent waters as you conquer the exhilarating twists and turns of the river.</p>
             </div>
             
             <div class="grid-item item2">
-                <h3>Trip 2</h3>
+                <h3>1/2 Day Raft Trip</h3>
                 <img src="images/trips2.jpg" alt="employee image" width="400">       
                 <p>Embark on an unforgettable journey on our Trip 2, specially designed for beginners. Over 2 days, you'll navigate gentle rapids and enjoy the stunning scenery of the river and surrounding wilderness. This trip is perfect for those seeking a thrilling introduction to white water rafting.</p>
             </div>
 
             <div class="grid-item item5">
-                <h3>Trip 3</h3>
+                <h3>2 Day Raft Trip</h3>
                 <img src="images/trips3.jpg" alt="employee imaage" width="400">    
                 <p>Experience the adrenaline rush of navigating through thrilling rapids and cascading waterfalls on our Trip 1. This intermediate-level trip spans 3 days, allowing you to fully immerse yourself in the beauty and excitement of white water rafting.</p>                  
             </div>   
