--- a/wwr/index.html
+++ b/wwr/index.html
@@ -65,7 +65,7 @@
     </main>
     <footer>
         <br>
-        <p>Contact Us Wireframe :<a href="https://wireframe.cc/pro/pp/7995c754b657593">https://wireframe.cc/pro/pp/7995c754b657593</a> </p>
+        <p>Home page Wireframe :<a href="https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/ad64222d5">https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/ad64222d5</a> </p>
         
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
         <div class="sociallinks">
