--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -109,7 +109,7 @@
     <footer>
         <br>
         <br>
-        <p> Wireframe :<a href="https://wireframe.cc/pro/pp/7995c754b657593">https://wireframe.cc/pro/pp/7995c754b657593</a> </p>
+        <p>Trips Wireframe:<a href="https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/a7d6ee4f2">https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/a7d6ee4f2</a> </p>
         
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
         <div class="sociallinks">
