--- a/wwr/index.html
+++ b/wwr/index.html
@@ -40,7 +40,8 @@
       <br>
       <section class="contact">
         <h2>Ready for an adventure?</h2>
-        <p>Check out our <a href="trips.html">exciting trips</a> and book your experience today.</p>
+        <p>Check out our exciting trips and book your experience today.</p>
+        <a href="trips.html">Explore Trips</a>
       </section>
 
 
@@ -64,9 +65,7 @@
 
     </main>
     <footer>
-        <br>
-        <p>Home page Wireframe :<a href="https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/ad64222d5">https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/ad64222d5</a> </p>
-        
+        <p><a href="https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/ad64222d5">Home page Wireframe</a></p>
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
         <div class="sociallinks">
             <a href="https://facebook.com">
