--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -22,8 +22,9 @@
     </header>
     <main>
         <h1>Rafting Trips</h1>
-        <section>
-            <p>For more information and bookings,<a href="contact.html">call now</a></p>
+        <section class="contact">
+            <p>For more information and bookings our services</p>
+            <a href="contact.html">Contact Us</a>
         </section>
 
         <div class="grid-container">
@@ -109,7 +110,7 @@
     <footer>
         <br>
         <br>
-        <p>Trips Wireframe:<a href="https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/a7d6ee4f2">https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/a7d6ee4f2</a> </p>
+        <p><a href="https://app.moqups.com/UiVDiM9TwBZzIW8ym0tWsVblYZ0OlbD5/view/page/a7d6ee4f2">Trips Wireframe:</a> </p>
         
         <p>© 2023 🌳 Whitewater Rafting base 🌳 Raila Oliech</p>
         <div class="sociallinks">
